# ligia-challenge-NLP-vlsm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
models/: best_model.joblib  vectorizer_char.joblib
notebooks/: 1_Analise-Exploratoria.ipynb  2_Pre-Processamento.ipynb  3_Treinamento-do-Modelo.ipynb  4_Inferencia.ipynb  pipeline.ipynb
scripts/: preprocessing.py  training.py
