[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Projeto de classifica\u00e7\u00e3o de textos para detec\u00e7\u00e3o de desinforma\u00e7\u00e3o digital. O objetivo \u00e9 desenvolver e avaliar modelos de NLP capazes de distinguir not\u00edcias leg\u00edtimas de conte\u00fados falsos com base em padr\u00f5es lingu\u00edsticos e sem\u00e2nticos. O projeto foi desenvolvido como parte da segunda etapa do processo seletivo da Liga Acad\u00eamica de Intelig\u1ebdncia Artificial da UFPE."
authors = [
  { name = "Vin\u00edcius Lima S\u00e1 de Melo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

